# branch-deck

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  app.config.ts  app.go  auto-imports.d.ts  components.d.ts  eslint.config.mjs  go.mod  go.sum  index.html  main.go  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  test-repo-generator.sh  tsconfig.json  vite.config.ts  vitest.config.ts  wails.json
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.run/: virtual-branches (debug).run.xml  virtual-branches (dev).run.xml  virtual-branches (production).run.xml
app/: app.vue
backend/: backend.go  backend_test.go  branch.go  commit-list.go  commit-list_test.go  commit-mapping.go  config.go  git.go  gitInfo.go  model.go  push.go  syncBranches.go  syncBranches_test.go
crates/branch-integration/: Cargo.toml
crates/branch-integration/src/: archive.rs  cache.rs  common.rs  detector.rs  lib.rs  merge.rs  rebase.rs  squash.rs  strategy.rs
crates/branch-sync/: Cargo.toml
crates/branch-sync/src/: add_issue_reference.rs  add_issue_reference_test.rs  branch_prefix.rs  commit_grouper.rs  commit_grouper_test.rs  create_branch.rs  create_branch_test.rs  issue_navigation.rs  issue_pattern.rs  lib.rs  progress.rs  repository_validation.rs  sync.rs  sync_test.rs
crates/git-ops/: Cargo.toml
crates/git-ops/src/: amend_operations.rs  amend_operations_test.rs  cache.rs  cherry_pick.rs  commit_list.rs  commit_list_test.rs  commit_utils.rs  conflict_analysis.rs  conflict_analysis_tests.rs  copy_commit.rs  copy_commit_test.rs  git_command.rs  git_command_test.rs  lib.rs  merge_conflict.rs  merge_conflict_tests.rs  mod.rs  model.rs  notes.rs  notes_test.rs  progress.rs  reword_commits.rs
crates/integration-detection-tests/: Cargo.toml
crates/integration-detection-tests/src/: archive_cleanup_tests.rs  cache_tests.rs  integration_tests.rs  lib.rs  merge_tests.rs  rebase_tests.rs  remote_status_tests.rs  squash_tests.rs  test_helpers.rs
crates/model-ai/: Cargo.toml
crates/model-ai/src/: download.rs  generator.rs  lib.rs  model_generation_tests.rs  path_provider.rs  test_utils.rs  types.rs
crates/model-ai/src/snapshots/: model_ai__model_generation_tests__casual_commits_files_only.snap  model_ai__model_generation_tests__casual_commits_full_diff.snap  model_ai__model_generation_tests__jwt_auth_feature_files_only.snap  model_ai__model_generation_tests__jwt_auth_feature_full_diff.snap  model_ai__model_generation_tests__large_feature_files_only.snap  model_ai__model_generation_tests__large_feature_full_diff.snap  model_ai__model_generation_tests__mixed_format_files_only.snap  model_ai__model_generation_tests__mixed_format_full_diff.snap  model_ai__model_generation_tests__non_conventional_files_only.snap  model_ai__model_generation_tests__non_conventional_full_diff.snap  model_ai__model_generation_tests__redis_memory_fix_files_only.snap  model_ai__model_generation_tests__redis_memory_fix_full_diff.snap  model_ai__model_generation_tests__validation_refactor_files_only.snap  model_ai__model_generation_tests__validation_refactor_full_diff.snap
crates/model-core/: Cargo.toml
crates/model-core/src/: config.rs  constants.rs  generator_type.rs  lib.rs  prompt.rs  prompt_tests.rs  quantized_qwen3.rs  qwen25.rs  qwen3.rs  test_utils.rs  utils.rs
crates/model-tauri/: Cargo.toml
crates/model-tauri/src/: commands.rs  commands_test.rs  download.rs  generator.rs  generator_test.rs  lib.rs  path_provider.rs  types.rs
crates/sync-core/: Cargo.toml
crates/sync-core/benches/: issue_pattern_bench.rs
crates/sync-core/src/: add_issue_reference.rs  add_issue_reference_test.rs  amend_to_branch.rs  branch_prefix.rs  branch_prefix_test.rs  branch_processor.rs  commit_grouper.rs  commit_grouper_test.rs  create_branch.rs  create_branch_test.rs  delete_archived_branch.rs  issue_navigation.rs  lib.rs  remote_status.rs  repository_validation.rs  sync.rs  sync_test.rs  unapply_branch.rs  unapply_branch_test.rs  uncommitted_changes.rs  uncommitted_changes_test.rs
crates/sync-types/: Cargo.toml
crates/sync-types/src/: branch_integration.rs  issue_navigation.rs  lib.rs  ordered_progress_reporter.rs
crates/test-server/: Cargo.toml
crates/test-server/src/: lib.rs  main.rs  sse_test.rs  state.rs  static_files.rs  tauri_command_bridge.rs
crates/test-server/tests/: sse_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: git_test_utils.rs  lib.rs  progress_reporter.rs  repo_template.rs  test_repo_generator.rs
frontend/: components.d.ts  eslint.config.mjs  index.html  package-lock.json  package.json  package.json.md5  vite.config.js  vite.config.ts
qwen-standalone/: Cargo.toml
qwen-standalone/src/: main.rs
scripts/: create-test-repo.sh  install-jaeger.sh  (+2 more)
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  sub-windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_update.rs  commit_grouper.rs  lib.rs  main.rs  menu.rs  menu_state.rs  progress.rs  repository_state.rs  repository_state_test.rs  telemetry.rs  test_utils.rs
src-tauri/src/commands/: add_issue_reference.rs  amend_to_branch.rs  archived_branches.rs  branch_prefix.rs  clear_model_cache.rs  create_branch.rs  create_branch_test.rs  download_model.rs  menu_commands.rs  mod.rs  model.rs  push.rs  repository_browser.rs  suggest_branch_name.rs  sync_branches.rs  sync_branches_test.rs  unapply_branch.rs  uncommitted_changes.rs  window_management.rs
src-tauri/src/git/: cache.rs  cherry_pick.rs  commit_list.rs  commit_list_test.rs  conflict_analysis.rs  conflict_analysis_tests.rs  conflict_formatter.rs  copy_commit.rs  copy_commit_test.rs  fast_cherry_pick.rs  git_command.rs  git_info.rs  merge_conflict.rs  merge_conflict_tests.rs  mod.rs  model.rs  notes.rs  notes_test.rs  plumbing_cherry_pick.rs
src-tauri/src/model/: mod.rs  tauri_download.rs  tauri_generator.rs  tauri_generator_tests.rs
(+332 files in other folders)
