[package]
name = "qwen-standalone"
version = "0.1.0"
edition = "2024"

# Empty workspace to make this a standalone package
[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
tracing-subscriber = "0.3"
model-core = { path = "../crates/model-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Platform-conditional CUDA support for optimal GPU acceleration  
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
model-core = { path = "../crates/model-core", features = ["cuda"] }
model-ai = { path = "../crates/model-ai" }
