[package]
name = "qwen-standalone"
version = "0.1.0"
edition = "2024"

# Empty workspace to make this a standalone package
[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Platform-specific ML acceleration
[target.'cfg(target_os = "macos")'.dependencies]
model-core = { path = "../crates/model-core", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
model-core = { path = "../crates/model-core" }
