#cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "branch-deck"
version = "0.1.0"
description = "Branch Deck"
authors = ["you"]
edition = "2024"
default-run = "branch-deck"

[features]
default = []
auto-update = ["dep:tauri-plugin-updater"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branch_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Define the main binary
[[bin]]
name = "branch-deck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
serde = { version = "1", features = ["derive"] }
branch-sync = { path = "../crates/branch-sync", features = ["specta"] }
#noinspection CargoUnusedDependency
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
regex = "1.11.1"
indexmap = "2.10.0"
tauri-plugin-log = "2"
tauri-plugin-devtools = "2.0.0"
anyhow = {version = "1.0.98", features = ["default", "backtrace"] }
tracing = { version = "0.1.41", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry"] }
tracing-log = "0.2"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = "0.31.0"
tempfile = "3.20.0"

# Crate dependencies
model-ai = { path = "../crates/model-ai" }
model-core = { path = "../crates/model-core" }
git-ops = { path = "../crates/git-ops" }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-window-state = "2"

# Platform-conditional CUDA support for optimal GPU acceleration
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
model-core = { path = "../crates/model-core", features = ["cuda"] }

[dev-dependencies]
test-utils = { path = "../crates/test-utils" }

