#cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "branch-deck"
version.workspace = true
description = "Branch Deck"
authors = ["you"]
edition.workspace = true
default-run = "branch-deck"

[features]
default = []
auto-update = ["dep:tauri-plugin-updater"]
devtools = ["dep:tauri-plugin-devtools"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branch_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Define the main binary
[[bin]]
name = "branch-deck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri.workspace = true
serde.workspace = true
sync-core = { path = "../crates/sync-core", features = ["specta"] }
sync-types = { path = "../crates/sync-types", features = ["specta"] }
branch-integration = { path = "../crates/branch-integration", features = ["specta"] }
#noinspection CargoUnusedDependency
serde_json.workspace = true
specta.workspace = true
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
anyhow.workspace = true
tracing.workspace = true
log = "0.4"

# Development and telemetry dependencies (feature-gated)
tauri-plugin-devtools = { version = "2.0.1", optional = true }
tracing-subscriber = { workspace = true, optional = true }
opentelemetry = { version = "0.30.0", optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio-current-thread"], optional = true }
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest-blocking-client"], optional = true }
tracing-opentelemetry = { version = "0.31.0", optional = true }
moka.workspace = true

# Crate dependencies
git-ops = { path = "../crates/git-ops" }
git-executor = { path = "../crates/git-executor" }
model-core = { path = "../crates/model-core" }
model-ai = { path = "../crates/model-ai", features = ["specta"] }
tokio.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-window-state = "2"

# Platform-specific ML acceleration
[target.'cfg(target_os = "macos")'.dependencies]
model-tauri = { path = "../crates/model-tauri", features = ["metal", "accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
model-tauri = { path = "../crates/model-tauri" }

[dev-dependencies]
tempfile = "3"

[package.metadata.cargo-machete]
# Build dependencies used in build.rs
ignored = ["tauri-build"]

