[package]
name = "branch-integration"
version.workspace = true
edition.workspace = true

[dependencies]
sync-types = { path = "../sync-types" }
sync-utils = { path = "../sync-utils" }
git-ops = { path = "../git-ops" }
git-executor = { path = "../git-executor" }
anyhow.workspace = true
indexmap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = "0.4"
tokio.workspace = true

[features]
default = []
specta = ["sync-types/specta", "git-ops/specta"]
