[package]
name = "branch-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
git-ops = { path = "../git-ops" }
anyhow.workspace = true
indexmap.workspace = true
regex.workspace = true
tracing.workspace = true
serde.workspace = true
specta = { workspace = true, optional = true }

[features]
default = []
specta = ["dep:specta"]

[dev-dependencies]
test-utils = { path = "../test-utils" }
tempfile.workspace = true
tokio.workspace = true
pretty_assertions = { workspace = true }
