[package]
name = "git-ops"
version = "0.1.0"
edition = "2021"
description = "Git operations and repository management for Branch Deck"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# Git and file operations
dashmap.workspace = true

# Tauri dependencies for IPC
tauri.workspace = true
specta.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }
tracing-subscriber.workspace = true
pretty_assertions = { workspace = true }

[features]
default = []
