[package]
name = "git-ops"
version.workspace = true
edition.workspace = true
description = "Git operations and repository management for Branch Deck"

[dependencies]
# Core git functionality
git-executor = { path = "../git-executor" }

# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# Git and file operations
dashmap.workspace = true


# Tauri dependencies for IPC
tauri.workspace = true
specta = { workspace = true, optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
pretty_assertions = { workspace = true }
test-log = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
specta = ["dep:specta"]
