[package]
name = "model-ai"
version = "0.1.0"
edition = "2021"
description = "AI application layer for branch name generation and repository analysis"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
specta = "=2.0.0-rc.22"

# Our crates
model-core = { path = "../model-core" }
git-ops = { path = "../git-ops" }

# Repository analysis and text processing
regex = "1.11.1"
indexmap = "2.10.0"
git-conventional = "0.12"

# HTTP client and download functionality
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
futures-util = "0.3"

[dev-dependencies]
test-utils = { path = "../test-utils" }
insta = { version = "1.43", features = ["yaml", "redactions"] }
tokio-test = "0.4"

[features]
default = []
