[package]
name = "model-ai"
version = "0.1.0"
edition = "2021"
description = "AI application layer for branch name generation and repository analysis"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
specta.workspace = true

# Our crates
model-core = { path = "../model-core" }
git-ops = { path = "../git-ops" }

# Repository analysis and text processing
regex.workspace = true
indexmap.workspace = true

# HTTP client and download functionality
reqwest.workspace = true
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
futures-util = "0.3"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "redactions"] }

[features]
default = []
