[package]
name = "model-ai"
version.workspace = true
edition.workspace = true
description = "AI application layer for branch name generation and repository analysis"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
specta = { workspace = true, optional = true }

# Our crates
model-core = { path = "../model-core" }
git-ops = { path = "../git-ops" }

# HTTP client and download functionality
reqwest.workspace = true
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
futures-util = "0.3"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "redactions"] }

[features]
default = []
metal = ["model-core/metal"]
accelerate = ["model-core/accelerate"]
specta = ["dep:specta", "git-ops/specta"]
