[package]
name = "model-tauri"
version.workspace = true
edition.workspace = true
description = "Tauri integration layer for AI model functionality"

[features]
default = []
metal = ["model-core/metal", "model-ai/metal"]
accelerate = ["model-core/accelerate", "model-ai/accelerate"]

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

# Tauri integration
tauri = { workspace = true }
specta.workspace = true

# Our crates
model-core = { path = "../model-core" }
model-ai = { path = "../model-ai" }
git-ops = { path = "../git-ops" }
git-executor = { path = "../git-executor" }

[dev-dependencies]
tempfile.workspace = true
test-utils = { path = "../test-utils" }
test-log = { workspace = true }
