[package]
name = "sync-types"
version.workspace = true
edition.workspace = true

[dependencies]
git-ops = { path = "../git-ops" }
anyhow.workspace = true
serde.workspace = true
specta = { workspace = true, optional = true }
crossbeam = "0.8"

[features]
default = []
specta = ["dep:specta", "git-ops/specta"]
