[package]
name = "test-server"
version.workspace = true
edition.workspace = true
default-run = "test-server"

[lib]
name = "test_server"
path = "src/lib.rs"

[[bin]]
name = "test-server"
path = "src/main.rs"

[[bin]]
name = "regenerate-templates"
path = "src/bin/regenerate-templates.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
serde.workspace = true
serde_json.workspace = true
svix-ksuid = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio-stream.workspace = true
listenfd = "1.0"

# Use the git operations crate
git-ops = { path = "../git-ops" }
git-executor = { path = "../git-executor" }
test-utils = { path = "../test-utils" }
sync-core = { path = "../sync-core" }
sync-types = { path = "../sync-types" }
model-ai = { path = "../model-ai" }
tempfile.workspace = true
fs_extra = "1.3.0"
remove_dir_all = { version = "1.0", features = ["parallel"] }
dashmap.workspace = true

[dev-dependencies]
reqwest.workspace = true
pretty_assertions = { workspace = true }
