[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"
description = "Shared test utilities for Branch Deck workspace"

[[bin]]
name = "generate-test-repo"
path = "src/bin/generate-test-repo.rs"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
tempfile = "3.20.0"
tokio = { workspace = true, features = ["process", "fs"] }
rand = "0.9.2"
clap = { version = "4", features = ["derive"] }

# Note: git-ops removed to avoid circular dependency - git-ops has its own test utilities

[features]
default = []