[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"
description = "Shared test utilities for Branch Deck workspace"

[[bin]]
name = "generate-test-repo"
path = "src/bin/generate-test-repo.rs"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
tempfile.workspace = true
clap.workspace = true

# Note: git-ops removed to avoid circular dependency - git-ops has its own test utilities

[dev-dependencies]

[features]
default = []