[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
description = "Shared test utilities for Branch Deck workspace"

[[bin]]
name = "generate-test-repo"
path = "src/bin/generate-test-repo.rs"

[dependencies]
# Core utilities (shared via workspace)
anyhow.workspace = true
tempfile.workspace = true
clap.workspace = true
tracing.workspace = true

# Git command executor
git-executor = { path = "../git-executor" }

# Note: git-ops removed to avoid circular dependency - git-ops has its own test utilities

[dev-dependencies]
test-log = { workspace = true }

[features]
default = []